# MoC-Nozzle-Solver

./: .gitignore  CombustionChamber.py  IsentropicTools.py  NASAMoC.py  Nozzle_Contour_M=2.68.dxf  Nozzle_Contour_M=2.70.dxf  Nozzle_Contour_M=2.74.csv  Nozzle_Contour_M=2.74.dxf  Nozzle_Contour_M=2.75.dxf  Output.py  Parameters.py  README.md  TemperatureAnalysis.py  app.py  environment.yml  main.py  pyproject.toml  scrapcode.py  solver.py  solver_iteration.py  stlgenerator.py
Output_Files/: Nozzle_Contour_M=2.18.csv  Nozzle_Contour_M=2.18.dxf  Nozzle_Contour_M=2.20.csv  Nozzle_Contour_M=2.20.dxf
engine/: Fuels.py  Parameters.py  solver_crt.py  solver_lcars.py
utils/: Output.py
