[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moc-nozzle-solver"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "rich",
    "numpy-stl",
    "rocketcea",
    "ezdxf",
    "pyvista"
]

[tool.setuptools]
py-modules = ["main", "CombustionChamber", "IsentropicTools", "Parameters", "stlgenerator", "TemperatureAnalysis", "solver", "Output", "solver_iteration"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
run-nozzle = "main:run"