[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moc-nozzle-solver"
version = "1.2.0"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "rich",
    "numpy-stl",
    "rocketcea",
    "ezdxf",
    "pyvista",
    "cea",
    "streamlit"
]

[tool.setuptools]
packages = ["engine", "utils"]
py-modules = ["main", "app", "launcher"]

[project.scripts]
run-nozzle = "launcher:start_app" # This replaces the old main:run reference